# lg_customer_workflow

./: .env.example  .gitignore  README.md  config.py  docker-compose.yml  justfile  langgraph.json  main.py  pyproject.toml  streamlit_app.py
agent_src/: graph.py  prompts.py  tools.py
chroma_db/: chroma.sqlite3
clients/: vector_db.py
cs_knowledge_base/delivery/: address_and_regions.md  delivery_options_overview.md  delivery_pricing_and_sla.md
cs_knowledge_base/payment/: payment_fail_reasons.md  payment_retry_playbook.md  payment_update_methods.md
cs_knowledge_base/returns/: refunds_and_exceptions.md  returns_policy_overview.md  returns_process_steps.md
cs_knowledge_base/tracking/: tracking_overview.md  tracking_playbook.md  tracking_status_dictionary.md
scripts/: chunk_and_embed_to_chroma.py  seed_postgres_cs.py
tests/: tool_test_cases.json
