[project]
name = "small-ai-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "chromadb>=1.0.12",
    "crawl4ai>=0.6.3",
    "html-to-markdown>=1.3.3",
    "ipykernel>=6.29.5",
    "langchain>=0.3,<0.4",
    "langgraph>=0.3,<0.4",
    "langchain-community>=0.3.24",
    "langchain-openai>=0.3.21",
    "requests>=2.32.3",
    "langchain-chroma>=0.2.4",
    "langgraph-cli",
    "langgraph-cli[inmem]",
    "pydantic-settings>=2.9.1",
    "playwright>=1.52.0",
    "streamlit>=1.29.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "psycopg[binary]>=3.2",
]

[dependency-groups]
dev = [
    "ruff>=0.11.13",
]
